--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -669,7 +669,7 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-handle {
   display: flex;
   align-items: flex-end;
   margin-bottom: 10px;
-  padding-left: 12px;
+  justify-content: center;
 }
 
 .tariff-plan__subtotal {
@@ -689,6 +689,7 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-handle {
   display: flex;
   align-items: baseline;
   margin-bottom: 9px;
+  justify-content: center;
 }
 
 .tariff-plan__sale {
@@ -703,6 +704,8 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-handle {
 .tariff-plan__sale-info {
   color: #f7474f;
   letter-spacing: 1px;
+  min-height: 26px;
+  line-height: 26px;
 }
 
 .tariff-plan__btn {
@@ -949,6 +952,35 @@ input[type="radio"] {
   }
 }
 
+.popup__tariff-title {
+  text-align: center;
+  font-weight: bold;
+  .rem(36);
+  .lh(28);
+  margin-bottom: 17px;
+}
+
+.popup__tariff {
+  margin-bottom: 25px;
+
+  .tariff-plan__total::after {
+    content: " /в мес.";
+    font-weight: normal;
+    .rem(18);
+    color: @main-color;
+    position: relative;
+    top: -2px;
+  }
+
+  .tariff-plan__price {
+    align-items: center;
+  }
+}
+
+.hidden {
+  display: none;
+}
+
 @media screen and (max-width: 1600px) {
   .top-img {
     margin-right: 0;
@@ -1192,18 +1224,32 @@ input[type="radio"] {
 
 @media screen and (max-width: 480px) {
   .popup {
-    width: 300px;
+    width: 280px;
     padding-left: 5px;
     padding-right: 5px;
   }
 
   .form-field-radio .radio span {
-    .rem(12);
+    .rem(14);
     padding: 0 5px;
   }
 
-  .popup-side__title {
+  .popup-side__title, .popup__tariff-title {
     .rem(24);
     .lh(28);
+  }
+
+  .popup__tariff {
+    .tariff-plan__subtotal {
+      .rem(13);
+    }
+
+    .tariff-plan__total {
+      .rem(20);
+
+      &::after {
+        .rem(13);
+      }
+    }
   }
 }
